# ps-parser

./: LICENSE  README.md  cli.py  pyproject.toml
psparser/: __init__.py  parser.py  reader.py  schema.py  tree.py  writer.py
src/psparser/: __init__.py  parser.py  schema.py  tree.py
